1999-08-16  Kevin McCarthy  <kmccarth@perldap.org> and Leif Hedstrom

	* API.xs: Cleaned most all the memory allocation changes, we are
	changing it to use the LDAP_OPT_MEMALLOC_FN_PTRS option in the
	C-SDK instead (much cleaner!).
	(perldap_init): New function, set up the memory management
	handlers. This is called when the API module is loaded.
	(perldap_malloc): New function, our memory management method(s).
	(perldap_calloc): Ditto.
	(perldap_realloc): Ditto.
	(perldap_free): Ditto.

1999-08-16  Kevin McCarthy  <kmccarth@perldap.org>

	* API.xs: Cleaned up prototypes, changed strdup() to use a
	Perl'ified version, change a number of free()'s to use Safefree.
	(ldap_value_free_perl): New function, similar to
	ldap_mods_free_perl(), to avoid memory problems (on NT and
	ActivePerl primarily).
	(StrDup): New function, to handle strdup() calls in a safe way.
	(ber_bvfree_perl): Ditto.
	(ber_bvecfree_perl): Ditto.

1999-08-15  Leif Hedstrom  <leif@netscape.com>

	* API.xs (ldap_mods_free_perl): Modified version of
	ldap_mods_free(), which uses Perl native free method instead of
	the things from the LDAP SDK. This fixes some nasty issues with
	Windows/NT and ActiveState Perl. Woohoo!!!

1999-08-14  Leif Hedstrom  <leif@netscape.com> and Kevin McCarthy

	* Entry.pm (setValues): Implemented bug fix for bug id 7131, where
	the "_save_" structures weren't set properly when using setValues().

1999-08-14  Kevin McCarthy  <kmccarth@perldap.org>

	* Conn.pm (update): Rewrote to optimize add/remove vs replace
	operations. Basically, we'll try to do whatever seems to be the
	smallest amount of work for the LDAP server now.

1999-08-13  Leif Hedstrom  <leif@netscape.com>

	* Makefile.PL: Cleaned up code, and added support for linking in
	the missing libraries need for some missing symbols.

1999-08-13  Michelle Wyner  <mwyner@netscape.com>

	* Entry.pm: Updated documentation, and cleaned it up.

	* Conn.pm: Ditto.

1999-08-12  Leif Hedstrom  <leif@netscape.com>
